--- a/src/shared/components/Modal/Modal.module.scss
+++ b/src/shared/components/Modal/Modal.module.scss
@@ -1,22 +1,36 @@
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 642px;
-    padding: 24px;
-    background-color: var(--main-back);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    transform: translate(-50%, -50%) scale(1);
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100ww;
+  height: 100wh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(39, 9, 105, 0.8);
+  z-index: 1200;
+}
 
-    &__container {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.3);
-        z-index: 2;
-    }
+.Modal {
+  position: relative;
+  max-width: calc(100% - 48px);
+  max-height: calc(100% - 24px);
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  cursor: pointer;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: blueviolet;
 }
