--- a/src/shared/components/Modal/Modal.module.scss
+++ b/src/shared/components/Modal/Modal.module.scss
@@ -15,16 +15,17 @@
 
 .Modal {
   position: relative;
-  max-width: calc(100% - 48px);
-  max-height: calc(100% - 24px);
+  max-width: calc(100% - 20px);
+  max-height: calc(100% - 20px);
   border-radius: 20px;
   overflow: hidden;
+  background-color:#fff;
 }
 
 .close {
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 0;
+  left: 0px;
   cursor: pointer;
   border-radius: 50%;
   width: 40px;
