--- a/src/shared/components/Modal/Modal.module.scss
+++ b/src/shared/components/Modal/Modal.module.scss
@@ -4,8 +4,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100ww;
-  height: 100wh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,21 +15,23 @@
 
 .Modal {
   position: relative;
-  max-width: calc(100% - 20px);
-  max-height: calc(100% - 20px);
+  min-width: 400px;
+  max-width: calc(100% - 10px);
+  max-height: calc(100% - 10px);
   border-radius: 20px;
   overflow: hidden;
   background-color:#fff;
+  padding: 30px 30px;
 }
 
 .close {
   position: absolute;
-  top: 0;
-  left: 0px;
+  top: 10px;
+  left: 10px;
   cursor: pointer;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 25px;
+  height: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
