--- a/src/shared/components/PageTitle/PageTitle.module.scss
+++ b/src/shared/components/PageTitle/PageTitle.module.scss
@@ -1,6 +1,6 @@
 .title {
     font-size: large;
     font-weight: 700;
-    margin-bottom: 20px;
     text-align: center;
+    margin-right: auto;
 }
