--- a/src/Pages/CarPage.module.scss
+++ b/src/Pages/CarPage.module.scss
@@ -1,17 +1,20 @@
 .section {
     padding-top: 50px;
-    padding-top: 50px;
+    padding-bottom: 50px;
     padding-left: 30px;
     padding-right: 30px;
     max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    max-width: 600px;
+    margin-right: auto;
+    margin-bottom: 10px;
 }
 
-.addaddCarBtn {
-    margin-left: auto;
-}
