--- a/src/Pages/CarPage.module.scss
+++ b/src/Pages/CarPage.module.scss
@@ -1,20 +1,31 @@
 .section {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    padding-left: 30px;
-    padding-right: 30px;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    max-width: 600px;
-    margin-right: auto;
-    margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  max-width: 600px;
+  margin-right: auto;
+  margin-bottom: 10px;
 }
 
+.button {
+  background-color: rgb(0, 255, 55);
+  font-size: 16px;
+  padding: 5px 10px;
+  transition: background-color 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  &:hover,
+  &:focus {
+    color: bisque;
+    background-color: rgb(16, 112, 37);
+  }
+}
