fix button styles

--- a/src/shared/components/AddCarForm/AddCarForm.module.scss
+++ b/src/shared/components/AddCarForm/AddCarForm.module.scss
@@ -1,15 +1,24 @@
 .form {
-    display: flex;
-    flex-direction: column;
-    gap:10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .label {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .input {
-    max-width: 200px;
+  max-width: 200px;
+}
+
+.button {
+  background-color: var(--main-light);
+  &:hover,
+  &:focus {
+    color: var(--grey-font);
+    background-color: var(--dark);
+  }
 }
